--- a/server/views/game/add.ejs
+++ b/server/views/game/add.ejs
@@ -6,14 +6,14 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1><%= title %></h1>
+            <h1>Create a Tournament</h1>
 
             <form class="form" method="POST">
                 <div class="form-group">
-                    <label for="nameTextField">Tournament Name</label>
+                    <label for="nameTextField">Team Name</label>
                     <input type="text" class="form-control"
                     id="nameTextField"
-                    placeholder="Enter the Tournament Name"
+                    placeholder="Enter the Team Name"
                     name="name" required>
                 </div>
 
@@ -39,13 +39,12 @@
                     id="activeTextField"
                     placeholder="Y/N"
                     name="active"  
-                    value="<%= game.active %>"
                     required>
                 </div>
 
                 <div class="form-group">
                     <label for="dateTextField">Date completed (If No)</label>
-                    <input type="date" class="form-control"
+                    <input type="text" class="form-control"
                     id="dateTextField"
                     placeholder="DD/MM/YYYY"
                     name="date" required>
@@ -53,7 +52,6 @@
 
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
-                
                     <a href="/game-match" class="btn btn-warning">
                         <i class="fas fa-undo"></i> Cancel</a>
 
