--- a/server/views/game/edit.ejs
+++ b/server/views/game/edit.ejs
@@ -6,11 +6,11 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1><%= title %></h1>
+            <h1> Edit Tournament </h1>
 
             <form class="form" method="POST">
                 <div class="form-group">
-                    <label for="nameTextField">Tournament Name</label>
+                    <label for="nameTextField">Team Name</label>
                     <input type="text" class="form-control"
                     id="nameTextField"
                     placeholder="Enter the Tournament Name"
@@ -52,7 +52,7 @@
 
                 <div class="form-group">
                    <label for="dateTextField">Date completed (If No)</label>
-                    <input type="date" class="form-control"
+                    <input type="text" class="form-control"
                     id="dateTextField"
                     placeholder="DD/MM/YYYY"
                     name="date" 
@@ -63,7 +63,7 @@
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
-                    <a href="/book-list" class="btn btn-warning">
+                    <a href="/game-match" class="btn btn-warning">
                         <i class="fas fa-undo"></i> Cancel</a>
 
             </form>
