--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -13,7 +13,15 @@
         <% } else  { %>
         <li class="nav-item">
         <% } %>
-          <a class="nav-link" href="/home"><i class="fas fa-lg fa-laptop-house"></i> Home </a>
+          <a class="nav-link" href="/"><i class="fas fa-lg fa-laptop-house"></i> Home </a>
+
+          <% if (title == "Winning Thrill"){ %>
+        <li class="nav-item active">
+        <% } else  { %>
+        <li class="nav-item">
+        <% } %>
+          <a class="nav-link" href="/game-match"><i class="fas fa-lg fa-laptop-house"></i> Tournament List </a>
+        </li>
         </li>
     </div>
   </nav>
