--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,7 +2,7 @@
 
 <%- include partials/main_nav.ejs %>
   
-
+<body id="indexBody">
   <!-- Main Content -->
   <main class="container">
     <div class="jumbotron">
@@ -14,6 +14,7 @@
       
     </div>
   </main>
+</body>
   
 <%- include partials/bottom_nav.ejs %>  
 
