Made Add button functional

--- a/server/views/game/add.ejs
+++ b/server/views/game/add.ejs
@@ -38,7 +38,7 @@
                     <input type="text" class="form-control"
                     id="activeTextField"
                     placeholder="Y/N"
-                    name="active"  
+                    name="Active"  
                     required>
                 </div>
 
@@ -47,7 +47,7 @@
                     <input type="text" class="form-control"
                     id="dateTextField"
                     placeholder="DD/MM/YYYY"
-                    name="date" required>
+                    name="Date" required>
                 </div>
 
                 <button class="btn btn-primary" type="submit">
