--- a/server/views/game/edit.ejs
+++ b/server/views/game/edit.ejs
@@ -46,7 +46,7 @@
                     id="activeTextField"
                     placeholder="Y/N"
                     name="active"  
-                    value="<%= game.active %>"
+                    value="<%= game.Active %>"
                     required>
                 </div>
 
@@ -56,7 +56,7 @@
                     id="dateTextField"
                     placeholder="DD/MM/YYYY"
                     name="date" 
-                    value="<%= game.date %>"
+                    value="<%= game.Date %>"
                     required>
                 </div>
 
