--- a/server/views/partials/bottom_nav.ejs
+++ b/server/views/partials/bottom_nav.ejs
@@ -1,6 +1,6 @@
 <!-- Bottom Nav -->
-  <footer>
-    <nav class="navbar fixed-bottom navbar-dark bg-dark">
-      <h6 class="display-10 navbar-text">&copy; Copyright 2020. All Rights reserved.</h6>
-    </nav>
-  </footer>
+ <footer>
+      <nav class="navbar bottom navbar-dark" style="background-color:grey;">
+        <p id="bottomNav">&copy; Copyright 2020. All Rights Reserved.</p>
+      </nav>
+    </footer>
