--- a/server/views/game/match.ejs
+++ b/server/views/game/match.ejs
@@ -12,7 +12,7 @@
             <a href="game-match/add" class="btn btn-primary" role="button">
             <i class="fas fa-plus-circle"></i> Create Tournaments</a>
             <br>
-            <table class="table table-bordered table-striped table-hover">
+            <table class="table table-bordered table-striped table-hover" id="matchTable" >
                 <!-- Header Row-->
                 <tr class="d-flex">
                     <th class="text-center col-2">Team Name</th>
