--- a/server/views/authentication/register.ejs
+++ b/server/views/authentication/register.ejs
@@ -27,7 +27,7 @@
           <input type="text" class="form-control" name='displayname' placeholder='enter display name' id='displayname' required>
         </fieldset>
         <fieldset class="form-group text-right">
-          <input type="submit" class="btn btn-success" value='login'>
+          <input type="submit" class="btn btn-success" value='register'>
           <a href="/">
             <input type="button" class="btn btn-warning" value="cancel">
           </a>
