--- a/server/views/authentication/register.ejs
+++ b/server/views/authentication/register.ejs
@@ -11,19 +11,19 @@
       <h1>Please Register</h1>
       <form method='post' autocomplete='off'>
         <fieldset class="form-group">
-          <label for="username">username: </label>
+          <label for="username">username:</label>
           <input type="text" class="form-control" name='username' placeholder='enter username' id='username' required autofocus>
         </fieldset>
         <fieldset class="form-group">
-          <label for="password">password: </label>
-          <input type="text" class="form-control" name='password' placeholder='enter password' id='password' required>
+          <label for="password">password:</label>
+          <input type="password" class="form-control" name='password' placeholder='enter password' id='password' required>
         </fieldset>
         <fieldset class="form-group">
-          <label for="email">email: </label>
+          <label for="email">email:</label>
           <input type="text" class="form-control" name='email' placeholder='enter email' id='email' required>
         </fieldset>
         <fieldset class="form-group">
-          <label for="displayname">display name: </label>
+          <label for="displayname">display name:</label>
           <input type="text" class="form-control" name='displayname' placeholder='enter display name' id='displayname' required>
         </fieldset>
         <fieldset class="form-group text-right">
