--- a/server/views/authentication/update.ejs
+++ b/server/views/authentication/update.ejs
@@ -8,20 +8,26 @@
   <%}%>
   <div class="row">
     <div class="offset-md-3 col-md-6">
-      <h1>Please Login</h1>
+      <h1>Update</h1>
       <form method='post' autocomplete='off'>
         <fieldset class="form-group">
           <label for="username">username:</label>
-          <input type="text" class="form-control" name='username' placeholder='enter username' id='username' required autofocus>
+          <input type="text" class="form-control" name='username' placeholder='enter username' id='username' value=<%= edit.username %> required autofocus>
         </fieldset>
         <fieldset class="form-group">
           <label for="password">password:</label>
           <input type="password" class="form-control" name='password' placeholder='enter password' id='password' required>
         </fieldset>
-        or
-        <a href="/register">Register Here</a>
+        <fieldset class="form-group">
+          <label for="email">email:</label>
+          <input type="text" class="form-control" name='email' placeholder='enter email' id='email' value=<%= edit.email %> required>
+        </fieldset>
+        <fieldset class="form-group">
+          <label for="displayname">display name:</label>
+          <input type="text" class="form-control" name='displayname' placeholder='enter display name' id='displayname' value=<%= edit.displayname %> required>
+        </fieldset>
         <fieldset class="form-group text-right">
-          <input type="submit" class="btn btn-success" value='login'>
+          <input type="submit" class="btn btn-success" value='update'>
           <a href="/">
             <input type="button" class="btn btn-warning" value="cancel">
           </a>
