--- a/server/views/game/edit.ejs
+++ b/server/views/game/edit.ejs
@@ -45,8 +45,8 @@
                     <input type="text" class="form-control"
                     id="activeTextField"
                     placeholder="Y/N"
-                    name="Active"  
-                    value="<%= game.Active %>"
+                    name="active"  
+                    value="<%= game.active %>"
                     required>
                 </div>
 
@@ -55,8 +55,8 @@
                     <input type="text" class="form-control"
                     id="dateTextField"
                     placeholder="DD/MM/YYYY"
-                    name="Date" 
-                    value="<%= game.Date %>"
+                    name="date" 
+                    value="<%= game.date %>"
                     required>
                 </div>
 
