--- a/server/views/game/match.ejs
+++ b/server/views/game/match.ejs
@@ -32,8 +32,8 @@
                         <td class="text-center col-2"><%= MatchList[count].name %></td>
                         <td class="col-4"><%= MatchList[count].description %></td>
                         <td class="text-center col-2"><%= MatchList[count].owner %></td>
-                        <td class="text-center col-1"><%= MatchList[count].Active %></td>
-                        <td class="text-center col-2"><%= MatchList[count].Date %></td>
+                        <td class="text-center col-1"><%= MatchList[count].active %></td>
+                        <td class="text-center col-2"><%= MatchList[count].date %></td>
                         <!-- hide the two buttons if not login -->
                         <% if(typeof displayname=='string' && displayname) {%>
                             <td class="text-center col-1">
