--- a/server/views/game/match.ejs
+++ b/server/views/game/match.ejs
@@ -14,35 +14,35 @@
             <table class="table table-bordered table-striped table-hover" id="matchTable" >
                 <!-- Header Row-->
                 <tr class="d-flex">
-                    <th class="text-center col-2">Team Name</th>
-                     <th class="col-4">Description</th>
-                    <th class="text-center col-2">Owner</th>
-                    <th class="text-center col-1">Active</th>
-                    <th class="text-center col-2">Date (If No)</th>
+                    <th class="text-center col-2 align-middle">Team Name</th>
+                    <th class="text-center col-4 align-middle">Description</th>
+                    <th class="text-center col-2 align-middle">Owner</th>
+                    <th class="text-center col-1 align-middle">Active</th>
+                    <th class="text-center col-2 align-middle">Date (If no)</th>
                     <!-- hide the two buttons if not login -->
                     <% if(typeof displayname=='string' && displayname) {%>
-                        <th class="text-center col-1">Edit Buttons</th>
-                        <th class="text-center col-1">Delete Buttons</th>
+                        <th class="text-center col-1 align-middle">Edit Buttons</th>
+                        <th class="text-center col-1 align-middle">Delete Buttons</th>
                     <% } %>
                 </tr>
 
                 <!-- Repeatable Template Row -->
                 <% for(let count = 0; count < MatchList.length; count++) { %>
                     <tr class="d-flex">
-                        <td class="text-center col-2"><%= MatchList[count].name %></td>
-                        <td class="col-4"><%= MatchList[count].description %></td>
-                        <td class="text-center col-2"><%= MatchList[count].owner %></td>
-                        <td class="text-center col-1"><%= MatchList[count].active %></td>
-                        <td class="text-center col-2"><%= MatchList[count].date %></td>
+                        <td class="text-center col-2 align-middle"><%= MatchList[count].name %></td>
+                        <td class="text-center col-4 align-middle"><%= MatchList[count].description %></td>
+                        <td class="text-center col-2 align-middle"><%= MatchList[count].owner %></td>
+                        <td class="text-center col-1 align-middle"><%= MatchList[count].active %></td>
+                        <td class="text-center col-2 align-middle"><%= MatchList[count].date %></td>
                         <!-- hide the two buttons if not login -->
                         <% if(typeof displayname=='string' && displayname) {%>
-                            <td class="text-center col-1">
-                                <a href="/game-match/edit<%= MatchList[count]._id %>" class="btn btn-primary btn-sm">
-                                <i class="fas fa-pencil-alt"></i> Edit</a>
+                            <td class="text-center col-1 align-middle">
+                                <a href="/game-match/edit/<%= MatchList[count]._id %>" class="btn btn-primary btn-sm">
+                                <i class="fas fa-pencil-alt"></i>Edit</a>
                             </td>
-                            <td class="text-center col-1">
-                                <a href="/game-match/delete<%= MatchList[count]._id %>" class="btn btn-danger btn-sm">
-                                <i class="fas fa-trash-alt"></i> Delete</a>
+                            <td class="text-center col-1 align-middle">
+                                <a href="/game-match/delete/<%= MatchList[count]._id %>" class="btn btn-danger btn-sm">
+                                <i class="fas fa-trash-alt"></i>Delete</a>
                             </td>
                         <% } %>
                     </tr>
