--- a/server/views/authentication/login.ejs
+++ b/server/views/authentication/login.ejs
@@ -11,11 +11,11 @@
       <h1>Please Login</h1>
       <form method='post' autocomplete='off'>
         <fieldset class="form-group">
-          <label for="username">username:</label>
+          <label for="username">Username: </label>
           <input type="text" class="form-control" name='username' placeholder='enter username' id='username' required autofocus>
         </fieldset>
         <fieldset class="form-group">
-          <label for="password">password:</label>
+          <label for="password">Password: </label>
           <input type="password" class="form-control" name='password' placeholder='enter password' id='password' required>
         </fieldset>
         or
