--- a/server/views/game/edit.ejs
+++ b/server/views/game/edit.ejs
@@ -6,8 +6,8 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1> Edit Tournament </h1>
-
+            <h1><%= title %></h1>
+            
             <form class="form" method="POST">
                 <div class="form-group">
                     <label for="nameTextField">Team Name</label>
@@ -25,8 +25,9 @@
                     id="descriptionTextArea"
                     placeholder="Enter the a brief description of the book"
                     name="description" 
+                    value= "<%= game.description %>"
                     required>
-                    <%= game.description %>
+                    
                     </textarea>
                 </div>
 
@@ -45,7 +46,7 @@
                     <input type="text" class="form-control"
                     id="activeTextField"
                     placeholder="Y/N"
-                    name="active"  
+                    name="Active"  
                     value="<%= game.active %>"
                     required>
                 </div>
@@ -55,7 +56,7 @@
                     <input type="text" class="form-control"
                     id="dateTextField"
                     placeholder="DD/MM/YYYY"
-                    name="date" 
+                    name="Date" 
                     value="<%= game.date %>"
                     required>
                 </div>
