--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -6,6 +6,8 @@
   <title><%= title %></title>
   <!-- CSS Section -->
   <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/jquery/dist/jquery.min.js">
   <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-  <link rel='stylesheet' href='/Content/app.css' />
+  <link rel='stylesheet' href='/Content/app.css'/>
+ 
 </head>
