--- a/server/views/partials/bottom_nav.ejs
+++ b/server/views/partials/bottom_nav.ejs
@@ -1,4 +1,4 @@
 <!-- Bottom Nav -->
- <footer style="background-color:tansparent;text-align: center;padding: 20px">
+ <footer style="background-color:tansparent;text-align: center;padding: 20px; fixed-bottom">
   <p id="bottomNav" style="margin: 0px">&copy; WinningThrill 2020. All Rights Reserved.</p>
 </footer>
