--- a/server/views/game/match.ejs
+++ b/server/views/game/match.ejs
@@ -18,7 +18,7 @@
             <br>
             <table class="table table-bordered table-striped table-hover" id="matchTable" >
                 <!-- Header Row-->
-                <tr class="d-flex">
+                <tr class="table-condensed">
                     <th class="text-center col-2">Team Name</th>
                      <th class="col-4">Description</th>
                     <th class="text-center col-2">Owner</th>
@@ -33,7 +33,7 @@
 
                 <!-- Repeatable Template Row -->
                 <% for(let count = 0; count < MatchList.length; count++) { %>
-                    <tr class="d-flex">
+                    <tr class="table-condensed">
                         <td class="text-center col-2"><%= MatchList[count].name %></td>
                         <td class="col-4"><%= MatchList[count].description %></td>
                         <td class="text-center col-2"><%= MatchList[count].owner %></td>
@@ -42,12 +42,12 @@
                         <!-- hide the two buttons if not login -->
                         <% if(typeof displayname=='string' && displayname) {%>
                             <td class="text-center col-1">
-                                <a href="/game-match/edit<%= MatchList[count]._id %>" class="btn btn-primary btn-sm">
+                                <a href="/game-match/edit<%= MatchList[count]._id %>" class="btn btn-primary btn-sm" id="editBtn">
                                 <i class="fas fa-pencil-alt"></i> Edit</a>
                             </td>
                             <td class="text-center col-1">
-                                <a href="/game-match/delete<%= MatchList[count]._id %>" class="btn btn-danger btn-sm">
-                                <i class="fas fa-trash-alt"></i> Delete</a>
+                                <a href="/game-match/delete<%= MatchList[count]._id %>" class="btn btn-danger btn-sm" id="delBtn">
+                                <i class="fas fa-trash-alt"></i> Del</a>
                             </td>
                         <% } %>
                     </tr>
