--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -11,7 +11,7 @@
       <a href="/game-match" class="btn btn-dark btn-lg">Create Tournament</a>
       <br>
       <br>
-    <div class="row">  
+    <div class="row">
     </div>
 
 </body>
@@ -26,7 +26,7 @@
                 <!-- Header Row-->
                 <tr class="table-condensed">
                     <th class="text-center col-1">Team Name</th>
-                     <th class="col-2">Description</th>
+                     <th class="text-center col-2">Description</th>
                     <th class="text-center col-1">Owner</th>
                     <th class="text-center col-1">Active</th>
                 </tr>
@@ -51,7 +51,6 @@
             </table>
         </div>
 </body>
-
 
 
 <%- include partials/bottom_nav.ejs %>
